--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ optional = true
 git = "https://github.com/embassy-rs/embassy"
 version = "0.1.0"
 optional = true
+
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+aarch64-cpu = "9.4.0"
